@@ -1,3 +1,9 @@
+2015-09-02  c.hetherington  <cth@carlh.net>
+
+	* Fix problems when changing the number
+	of encoding servers / threads during an
+	encode (#683).
+
 2015-09-02  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.1.50 released.
